# Uni

./: .gitmodules
Erasmus/CC/: notes.md
Erasmus/CC/List1/: theoretical.txt
Erasmus/CC/List2/: theoretical.txt
Erasmus/LIP/: .gitignore  _quarto.yaml  _quarto.yml  util.py
Erasmus/LIP/Assignment/: assignment.qmd
Erasmus/LIP/Example/: assignment.qmd  assignment.tex
Erasmus/LIP/List1/: exc1-3.py
Erasmus/LIP/List2/: exc12.py
Erasmus/LIP/List3/: exc5.qmd
Erasmus/LIP/Test/: test.qmd
Erasmus/NLP/: hf_sequence_classification.ipynb
Erasmus/SP/Exc1/: task1.py  task2-3.py  task2.py  task3.py
Erasmus/STM/: _quarto.yml
Erasmus/STM/Assignment/: Data ST523 813 E2025 Exam.rdata  assignment.qmd
Erasmus/STM/List0/: .gitignore  exc0.R
Erasmus/STM/List2/: Lecture5_MultipleRegression.Rmd  Lecture5_MultipleRegression.qmd
Erasmus/STM/List3/: exc2.qmd  exc3.qmd
Erasmus/STM/List4/: exc1.qmd  exc2.qmd
Erasmus/STM/List6/: list.qmd
Sem3/: .gitignore
Sem3/AKiSO/: .gitignore
Sem3/AKiSO/List6/: exc1
Sem3/SoftwareEngineering2024/: .gitignore
Sem4/AI/: train.py
Sem4/Haskell/: Additional.hs  Exc3.hs  Exc4.hs  Exc5.hs  Exc6.hs  Exc7.hs  Matrix.hs
Sem4/TS/: .gitignore  sprawozdanie.md
Sem4/TS/List3/Generating/: generate-graph.cabal  graph.json  node_mimic  tea
Sem4/TS/List3/Generating/src/: Algorithm.hs  Graph.hs  Main.hs
Sem6/SW/: Car.cpp  Car.h  Dashboard.cpp  Queue.h  Wheels.cpp  Wheels.h  lab1.ino
Sem6/TPI/: exc15.qmd  exc57.qmd
Sem6/WZA/: .gitignore  Lab1.hs  Lab2.hs  Lab3.hs  lab1.hs  sprawozdanie.qmd  sprawozdanie2.qmd  sprawozdanie3.qmd
(+465 files in other folders)
