cabal-version:       2.4
name:                generate-graph
version:             0.1.0.0
build-type:          Simple

executable generate-graph
    main-is:            Main.hs
    build-depends:      base >=4.7 && <5
                      , aeson >= 2.0.0
                      , bytestring >= 0.10
    hs-source-dirs:     src
    default-language:   Haskell2010
