cabal-version:       2.4
name:                generate-graph
version:             0.1.0.0
build-type:          Simple

executable generate-graph
    main-is:            Main.hs
    build-depends:      base
                      , aeson
                      , bytestring
                      , random
                      , containers
    hs-source-dirs:     src
    default-language:   Haskell2010